--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -26,6 +24,20 @@
 
 .App-link {
   color: #61dafb;
+}
+.form{
+  padding: 3em;
+  padding-top: 1em;
+  padding-bottom: 2em;
+  margin-top: 2em;
+  border-radius: 2px;
+  border: 1px solid #dee2e6 !important;
+  border-radius: 30px;
+  
+}
+
+.title-page {
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
